--- a/jdk.html
+++ b/jdk.html
@@ -315,7 +315,7 @@
       <div class="container">
         <a class="brand" href="#home"
           ><img
-            src="C:\Users\yogendra\Downloads\jdk logo 1.png"
+            src="JDK/jdk logo 1.png"
             alt="jdk logo"
           />
           <div>
@@ -625,3 +625,4 @@
     </script>
   </body>
 </html>
+
