Update print statement from 'Hello' to 'Goodbye'

--- a/jdk.html
+++ b/jdk.html
@@ -315,7 +315,7 @@
       <div class="container">
         <a class="brand" href="#home"
           ><img
-            src="JDK/jdk logo 1.png"
+            src="https://github.com/yogendra-04/JDK/blob/main/jdk%20logo%201.png"
             alt="jdk logo"
           />
           <div>
@@ -625,4 +625,5 @@
     </script>
   </body>
 </html>
+
 
