--- a/jdk.html
+++ b/jdk.html
@@ -170,7 +170,7 @@
       }
 
       /* --- ABOUT SECTION COLOR FIXES --- */
-      /* Make about section text darker and readable against the light page background */
+      /* Make about  text darker and readable against the light page background */
       #about .lead {
         color: #1f2937; /* darker slate for paragraph text — change to your taste */
       }
@@ -621,9 +621,11 @@
         console.log("contact payload", obj);
         alert("Thanks " + obj.name + " — your message was received.");
         e.target.reset();
+        
       }
     </script>
   </body>
 </html>
+
 
 
